@@ -165,12 +165,13 @@ details. */
        65: Export siginterrupt
        66: Export nl_langinfo
        67: Export pthread_getsequence_np
+       68: Export netdb stuff
      */
 
      /* Note that we forgot to bump the api for ualarm, strtoll, strtoull */
 
 #define CYGWIN_VERSION_API_MAJOR 0
-#define CYGWIN_VERSION_API_MINOR 67
+#define CYGWIN_VERSION_API_MINOR 68
 
      /* There is also a compatibity version number associated with the
 	shared memory regions.  It is incremented when incompatible
